--- a/index.html
+++ b/index.html
@@ -137,12 +137,16 @@
 <!--===== WORK =====-->
 <section class="work section" id="work">
     <h2 class="section-title">Current Work</h2>
+    <p>
+        I lead the technical initiatives and oversee the digital infrastructure, including website development, system administration, and cybersecurity. I'm dedicated to leveraging technology to advance our mission. Additionally, I serve on the board of directors, contributing strategic insights and representing our organization at community events. My goal is to utilize my expertise to create positive change.
+    </p>
     <div class="work__container bd-grid">
         <a href="https://www.mothersingriefsupportgroup.com" class="work__img" target="_blank" rel="noopener noreferrer">
             <img src="assets/img/work4.png" alt="Work image">
         </a>
     </div>
 </section>
+
 
 
 <!--===== CONTACT =====-->
