--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 <section class="work section" id="work">
     <h2 class="section-title">Current Work</h2>
     <p>
-        I lead the technical initiatives and oversee the digital infrastructure, including website development, system administration and cybersecurity. I'm dedicated to leveraging technology to advance our mission. My goal is to utilize my expertise to create positive change.
+        I lead the technical initiatives and oversee the digital infrastructure, including website development, system administration and cybersecurity. I'm dedicated to leveraging technology to advance our mission. My goal is to utilize my expertise to create positive change. When I'm not coding, you can find me traveling or diving into OSINT research.
     </p>
     <div class="work__container bd-grid">
         <a href="https://www.mothersingriefsupportgroup.com" class="work__img" target="_blank" rel="noopener noreferrer">
