--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                             
                             Since 2012, I've immersed myself deeper in the world of computers, programming, and cybersecurity, driven by curiosity for understanding technology's inner workings. What some may perceive as setbacks have only fueled my determination to overcome obstacles, shaping me into a resilient and adaptable professional.
                             
-                            I've honed my skills through practical experience and a commitment to staying ahead of threats. Despite lacking formal education, I firmly believe in the power of hands-on knowledge and unwavering dedication.</p>           
+                            I've honed my skills through practical experience and a commitment to staying ahead of threats. Despite lacking formal education, I firmly believe in the power of hands-on knowledge and unwavering dedication. I'm passionate about the human side of technology, where integrity, curiosity, and ethical conduct drive meaningful progress.</p>           
                     </div>                                   
                 </div>
             </section>
