--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 <section class="work section" id="work">
     <h2 class="section-title">Current Work</h2>
     <p class="work-description">
-        I work alongside a nonprofit organization, leading technical initiatives and overseeing the digital infrastructure, including web development, system administration, cybersecurity, and social media. I'm dedicated to leveraging technology to advance our mission and create positive change.
+        I work alongside a Non-Profit Organization, leading technical initiatives and overseeing the digital infrastructure that supports our mission. My responsibilities include web development, system administration, cybersecurity, and managing our social media presence. I am dedicated to leveraging technology not only to enhance operational efficiency but also to engage our community and drive awareness around our cause. Through innovative digital solutions, I aim to create positive change and empower our outreach efforts.
     </p>
     <div class="work__container bd-grid">
         <!-- Removed the link and image here -->
