--- a/index.html
+++ b/index.html
@@ -104,27 +104,27 @@
         </div>
         <div class="skills__data">
             <img src="https://img.shields.io/badge/-Python-3776AB?style=flat-square&logo=python&logoColor=white" alt="Python" class="skills__img">
-            <span class="skills__name">A high-level, general-purpose programming language known for its readability and versatility in various applications.</span>
+            <span class="skills__name">A high-level, general purpose programming language known for its readability and versatility in various applications.</span>
         </div>
         <div class="skills__data">
             <img src="https://img.shields.io/badge/-ReactJS-61DAFB?style=flat-square&logo=react&logoColor=black" alt="React" class="skills__img">
-            <span class="skills__name">A JavaScript library for building user interfaces, particularly for single-page applications.</span>
+            <span class="skills__name">A JavaScript library for building user interfaces, particularly for single page applications.</span>
         </div>
         <div class="skills__data">
             <img src="https://img.shields.io/badge/-Node.js-339933?style=flat-square&logo=node.js&logoColor=white" alt="Node.js" class="skills__img">
-            <span class="skills__name">A JavaScript runtime built on Chrome's V8 engine, enabling server-side development with JavaScript.</span>
+            <span class="skills__name">A JavaScript runtime built on Chrome's V8 engine, enabling server side development with JavaScript.</span>
         </div>
         <div class="skills__data">
             <img src="https://img.shields.io/badge/-MongoDB-47A248?style=flat-square&logo=mongodb&logoColor=white" alt="MongoDB" class="skills__img">
-            <span class="skills__name">A NoSQL database that uses a flexible document model to store data in JSON-like formats.</span>
+            <span class="skills__name">A NoSQL database that uses a flexible document model to store data in JSON like formats.</span>
         </div>
         <div class="skills__data">
             <img src="https://img.shields.io/badge/-Electron-47848F?style=flat-square&logo=electron&logoColor=white" alt="Electron" class="skills__img">
-            <span class="skills__name">A framework for building cross-platform desktop applications using web technologies like JavaScript, HTML, and CSS.</span>
+            <span class="skills__name">A framework for building cross platform desktop applications using web technologies like JavaScript, HTML, and CSS.</span>
         </div>
         <div class="skills__data">
             <img src="https://img.shields.io/badge/-WordPress-21759B?style=flat-square&logo=wordpress&logoColor=white" alt="WordPress" class="skills__img">
-            <span class="skills__name">A content management system (CMS) used to create and manage websites easily, often through templates and plugins.</span>
+            <span class="skills__name">A content management system (CMS) used to create and manage websites.</span>
         </div>
         <div class="skills__data">
             <img src="https://img.shields.io/badge/-Markdown-000000?style=flat-square&logo=markdown&logoColor=white" alt="Markdown" class="skills__img">
@@ -144,15 +144,15 @@
         </div>
         <div class="skills__data">
             <img src="https://img.shields.io/badge/-Linux-FCC624?style=flat-square&logo=linux&logoColor=black" alt="Linux" class="skills__img">
-            <span class="skills__name">An open-source operating system modelled on UNIX, known for its security and versatility.</span>
+            <span class="skills__name">An open source operating system modelled on UNIX, known for its security and versatility.</span>
         </div>
         <div class="skills__data">
             <img src="https://img.shields.io/badge/-Canva-00C4CC?style=flat-square&logo=canva&logoColor=white" alt="Canva" class="skills__img">
-            <span class="skills__name">A web-based graphic design tool that simplifies creating graphics, presentations, and social media posts.</span>
+            <span class="skills__name">A web based graphic design tool that simplifies creating graphics, presentations, and social media posts.</span>
         </div>
         <div class="skills__data">
             <img src="https://img.shields.io/badge/-GIMP-D32C3D?style=flat-square&logo=gimp&logoColor=white" alt="GIMP" class="skills__img">
-            <span class="skills__name">An open-source image editing software used for tasks such as photo retouching, image editing, and graphic design.</span>
+            <span class="skills__name">An open source image editing software used for tasks such as photo retouching, image editing, and graphic design.</span>
         </div>
         <div class="skills__data">
             <img src="https://img.shields.io/badge/-NPM-CB3837?style=flat-square&logo=npm&logoColor=white" alt="NPM" class="skills__img">
@@ -160,7 +160,7 @@
         </div>
         <div class="skills__data">
             <img src="https://img.shields.io/badge/-Joomla-3F5B9A?style=flat-square&logo=joomla&logoColor=white" alt="Joomla" class="skills__img">
-            <span class="skills__name">A free and open-source content management system for publishing web content, known for its flexibility and ease of use.</span>
+            <span class="skills__name">A free and open source content management system for publishing web content, known for its flexibility and ease of use.</span>
         </div>
         <div class="skills__data">
             <img src="https://img.shields.io/badge/-AWS-232F3E?style=flat-square&logo=amazonaws&logoColor=white" alt="AWS" class="skills__img">
