--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
             <img src="https://images.credly.com/size/680x680/images/242902b5-f527-42ad-865e-977c9e1b5b58/image.png" alt="Cisco Ethical Hacker Badge" class="certification__img">
             <a href="https://www.credly.com/badges/043057fb-4ce8-49da-8a35-44d3815ddc7b" target="_blank" class="certification__link">View Badge</a>
             
-            <p class="certification__description">I am actively pursuing further certifications to enhance my skills and knowledge in information technology and cybersecurity.</p>
+            <p class="certification__description">I am actively pursuing further certifications to enhance my skills and knowledge in IT and cybersecurity.</p>
             <a href="https://www.credly.com/users/jason-gianakopulos" target="_blank" class="button certification__button">View Certifications</a>
         </div>
         <!-- Adding more certifications as obtained -->
