--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     <div class="skills__container bd-grid">
         <div>
             <h2 class="skills__subtitle">Professional Skills</h2>
-            <p class="skills__text">My journey in technology has equipped me with a diverse set of skills tailored to the ever-evolving landscape of IT and cybersecurity. Drawing from a blend of self-taught and practical experience, I've honed my abilities in several key areas:</p>
+            <p class="skills__text">My journey in technology has equipped me with a diverse set of skills that keep up with the fast-paced world of IT and cybersecurity. Drawing from a blend of self learning and practical experience, I've honed my abilities in several key areas:</p>
         </div>
 
         <div class="skills__data">
