--- a/index.html
+++ b/index.html
@@ -182,16 +182,20 @@
 <section class="certifications section" id="certifications">
     <h2 class="section-title">Certifications</h2>
     <div class="certifications__container bd-grid">
-        <!-- Certification 1 -->
+        <!-- Ethical Hacker -->
         <div class="certification__item">
             <img src="https://images.credly.com/size/680x680/images/242902b5-f527-42ad-865e-977c9e1b5b58/image.png" alt="Cisco Ethical Hacker Badge" class="certification__img">
-            <a href="https://www.credly.com/badges/043057fb-4ce8-49da-8a35-44d3815ddc7b" target="_blank" class="certification__link">View Badge</a>
-            
-            <p class="certification__description">I am actively pursuing further certifications to enhance my skills and knowledge in IT and cybersecurity.</p>
-            <a href="https://www.credly.com/users/jason-gianakopulos" target="_blank" class="button certification__button">View Certifications</a>
+            <a href="https://www.credly.com/badges/043057fb-4ce8-49da-8a35-44d3815ddc7b" target="_blank" rel="noopener noreferrer">View Certification</a>
         </div>
-        <!-- Adding more certifications as obtained -->
+        
+        <!-- Network Defense -->
+        <div class="certification__item">
+            <img src="https://images.credly.com/images/51526f76-711b-4caf-b04d-27f89512b112/NetworkDefense_v1_091721.png" alt="New Cisco Certification Badge" class="certification__img">
+            <a href="https://www.credly.com/badges/46482d56-aa27-478c-85d4-9f4f80c0f75b" target="_blank" rel="noopener noreferrer">View Certification</a>
+        </div>
     </div>
+    <!-- Message about pursuing further certifications -->
+    <p class="certifications__message">I am actively pursuing further certifications to enhance my skills and knowledge in IT and cybersecurity.</p>
 </section>
 
 <!--===== WORK =====-->
