--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ operations ceased in March 2020 due to the economic impact of COVID-19.
                     <div class="project-info">
                         <h3>Updating</h3>
                         <p>
-                            Coming soon, Project will be uploaded to GitHub.
+                            Coming soon, project will be uploaded to GitHub.
                         </p>
                         <a href="#">View Project</a>
                     </div>
