--- a/index.html
+++ b/index.html
@@ -90,10 +90,7 @@
                 <p>
                     In my role, I lead technical initiatives and oversee the organization's digital infrastructure, which includes
 website development, system administration, and cybersecurity. I am committed to using technology
-to advance our mission. My efforts in digital presence include leading the design and development of a
-modernized, user friendly website that enhances user engagement and accessibility. I have streamlined
-email communication by implementing efficient server configurations and management protocols,
-improving reliability and security. Additionally, I developed a social media strategy that boosted follower
+to advance our mission. I developed a social media content that boosted follower
 engagement and brand visibility across various platforms. 
                 </p>
             </div>
