--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@ operations ceased in March 2020 due to the economic impact of COVID-19.
                     <div class="project-info">
                         <h3>Fentanyl Awareness Quiz</h3>
                         <p>
-                            The Fentanyl Awareness Quiz is a web app designed to educate users about the dangers of fentanyl. It includes three parts, covering its effects, prevention, and overdose response strategies. The app aims to raise awareness and can be integrated into an organization’s website to further its mission.
+                            The Fentanyl Awareness Quiz is a web app designed to educate users about the dangers of Fentanyl. It includes three parts, covering its effects, prevention, and overdose response strategies. The app aims to raise awareness and can be integrated into an organization’s website to further its mission.
                         </p>
                         <a href="https://github.com/ScribeAegis/MIGSG-Quiz">View Project</a>
                     </div>
