--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ operations ceased in March 2020 due to the economic impact of COVID-19.
             <div class="row">
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/project.jpg" />
+                        <img src="images/quiz.png" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
