--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 <p>
                     In my role, I lead technical initiatives and oversee the organization's digital infrastructure, which includes
 website development, system administration, and cybersecurity. I am committed to using technology
-to advance our mission. I developed a social media content that boosted follower
+to advance our mission. Additionally I also worked on graphics design creating social media content that boosted follower
 engagement and brand visibility across various platforms. 
                 </p>
             </div>
