--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@ operations ceased in March 2020 due to the economic impact of COVID-19.
                     <div class="project-info">
                         <h3>Opioid Awareness Quiz</h3>
                         <p>
-                            The Opioid Awareness Quiz is a web app designed to educate users about the dangers of Fentanyl. It includes three parts, covering its effects, prevention, and overdose response strategies. The app aims to raise awareness and can be integrated into a website.
+                            The Opioid Awareness Quiz is a web app designed to educate visitors about the dangers of Fentanyl. It includes three parts, covering its effects, prevention, and overdose response strategies. The app aims to raise awareness and can be integrated into a website.
                         </p>
                         <a href="https://github.com/ScribeAegis/MIGSG-Quiz">View Project</a>
                     </div>
