--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ engagement and brand visibility across various platforms.
             </div>
 
             <div data-date="December 2017 – March 2020">
-                <h3>Self-Employeed</h3>
+                <h3>Self-Employed</h3>
                 <h4>Owner/President</h4>
                 <p>
                     Owned and operated a small local business. Managed all aspects of the business, from daily operations to client interactions,
