--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ engagement and brand visibility across various platforms.
 
             <div data-date="December 2017 – March 2020">
                 <h3>Self-Employed</h3>
-                <h4>Owner/President</h4>
+                <h4>Owner/Operator</h4>
                 <p>
                     Owned and operated a small local business. Managed all aspects of the business, from daily operations to client interactions,
 ensuring high-quality service and customer satisfaction. Led hands-on work. Built a loyal client base through reliable
