--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ engagement and brand visibility across various platforms.
                 <p>
                     Owned and operated a small local business. Managed all aspects of the business, from daily operations to client interactions,
 ensuring high-quality service and customer satisfaction. Led hands-on work. Built a loyal client base through reliable
-service and attention to detail, contributing to the business's growth and local reputation. Business
+service and attention to detail contributing to the business's growth and local reputation. Business
 operations ceased in March 2020 due to the economic impact of COVID-19.
                 </p>
             </div>
