--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ operations ceased in March 2020 due to the economic impact of COVID-19.
             <span class="education-date">December 2012 - Present</span>
             <h4>Information Technology / Cybersecurity</h4>
             <p>
-                Although my formal education has included a combination of self-taught learning and courses from Cisco Networking Academy, I have earned several IT and cybersecurity certifications. My learning journey is built on hands-on experience, online resources, and practical application, giving me a robust understanding of IT fundamentals, network security, and system management. Through this self-directed approach, I continue to expand my knowledge and stay up-to-date with the evolving landscape of technology.
+                Although my formal education has included a combination of self-taught learning and courses, I have earned several IT and cybersecurity certifications. My learning journey is built on hands-on experience, online resources, and practical application, giving me a robust understanding of IT fundamentals, network security, and system management. Through this self-directed approach, I continue to expand my knowledge and stay up-to-date with the evolving landscape of technology.
             </p>
         </div>
         <!-- End .education-block -->
