--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ operations ceased in March 2020 due to the economic impact of COVID-19.
                     This experience helped me hone critical thinking, problem-solving, and communication skills that I would later apply in both my academic and professional pursuits.
                 </li>
                 <li>
-                    Although I transitioned to self-directed learning in pursuit of a IT and web development career, the knowledge and discipline I gained at Savanna have played a key role in shaping my work ethic and approach to self-education.
+                    Although I transitioned to self-directed learning, the knowledge and discipline I gained at Savanna have played a key role in shaping my work ethic and approach to self-education.
                 </li>
             </ul>
         </div>
