--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@ operations ceased in March 2020 due to the economic impact of COVID-19.
                         <p>
                             Coming soon, project will be uploaded to GitHub.
                         </p>
-                        <a href="#">View Project</a>
+                        <a href="https://github.com/">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
