--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@ operations ceased in March 2020 due to the economic impact of COVID-19.
             <div class="row">
                 <div class="col-sm-5 copyright">
                     <p>
-                        Copyright &copy; <span id="current-year">2024</span> JASON GIANAKOPULOS
+                        Copyright &copy; <span id="current-year">2024-2025</span> JASON GIANAKOPULOS
                     </p>
                 </div>
                 <div class="col-sm-2 top">
